<?xml version="1.0"?>
<package format="2">
  <name>spoof_sensing</name>
  <version>0.0.1</version>

  <description>Utility nodes to spoof various sensing/navigation interfaces</description>
  <maintainer email="chris@cthierauf.com">cst0 (Chris Thierauf)</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
